[workspace]

members = [
    "gdk_common",
    "gdk_electrum",
    "gdk_registry",
    "gdk_rust",
]


[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'
codegen-units = 1
incremental = false

[profile.dev]

## Link time optimizations are required for debug builds on iphone and iphonesim
## If we set lto to true here we increase rust development build time.
## CI builds overwrite this field by setting `CARGO_PROFILE_DEV_LTO=true`
# lto = true

debug = true
debug-assertions = true
panic = 'abort'
