[workspace]

members = [
    "gdk_common",
    "gdk_electrum",
    "gdk_pin_client",
    "gdk_registry",
    "gdk_rust",
]

exclude = [ "gdk_test" ]

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'
codegen-units = 1
incremental = false

[profile.dev]

## Link time optimizations are required for debug builds on iphone and iphonesim
## If we set lto to true here we increase rust development build time.
## CI builds overwrite this field by setting `CARGO_PROFILE_DEV_LTO=true`
# lto = true

debug = true
debug-assertions = true
panic = 'abort'
lto = true

[patch.crates-io]
ciborium = { git = "https://github.com/RCasatta/ciborium", rev="187988c80a04b0da47579c2683f42b16795e6f14" }
