[package]
name = "gdk_electrum"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }
android_logger = "0.8"

[dependencies]
log = "0.4.8"
rand = "0.7.2"
hex = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin_hashes = "0.7.1"
sled = "0.29.2"
sha2 = "0.8.0"

[dependencies.bitcoin]
version = "0.21"
features = ["use-serde"]
