[package]
name = "gdk-common"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>", "William Casarin <jb55@jb55.com>"]
edition = "2018"

[features]
testing = []

[dependencies]
aes = "0.7.0"
aes-gcm-siv = "0.10"
bitcoin = { version = "0.29", features = ["serde"] }
elements = { version = "0.20", features = ["serde"] }
libc = "0.2"
log = "0.4.8"
miniscript = "9.0"
once_cell = "1.12"
electrum-client = { version = "0.14.1", default-features = false, features = [ "proxy", "use-openssl" ] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0"
thiserror = "1.0"
ureq = { version = "2.5.0", features = ["json", "socks-proxy", "gzip", "brotli"] }
url = "2.2.2"

[dev-dependencies]
strum = "0.24"
strum_macros = "0.24"
tempfile = "3.2"
