[package]
name = "gdk-common"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>", "William Casarin <jb55@jb55.com>"]
edition = "2018"

[features]
testing = []

[dependencies]
aes = "0.7.0"
aes-gcm-siv = "0.10"
bitcoin = { version = "0.31", features = ["serde"] }
serde_cbor = "0.11.1"
elements = { version = "0.24", features = ["serde"] }
libc = "0.2"
log = "0.4.8"
miniscript = "11.0"
once_cell = "1.12"
electrum-client = { version = "0.19", default-features = false, features = [ "proxy", "use-openssl" ] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ureq = { version = "2.7.1", features = ["json", "socks-proxy", "gzip", "brotli"] }
url = "2.2.2"
elements-miniscript = "0.3.0"
pbkdf2 = {version = "0.12"}
sha2 = { version = "0.10"}

[dev-dependencies]
strum = "0.24"
strum_macros = "0.24"
tempfile = "3.2"
bip39 = {version = "2.0"}
