[package]
name = "gdk-electrum"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"

[features]
testing = [ "gdk-common/testing" ]

[dependencies]
base64 = "0.13"
bitcoin = { version = "0.29", features = [ "serde" ] }
block-modes = "0.8.0"
electrum-client = { version = "0.12.0", default-features = false, features = [ "proxy", "use-openssl" ] }
elements = { version = "0.20", features = ["serde"] }
gdk-common = { path = "../gdk_common" }
gdk-registry = { path = "../gdk_registry" }
libc = "0.2"
log = "0.4.8"
once_cell = "1.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0"
tempfile = "3.2.0"
thiserror = "1.0"
ureq = { version = "2.4.0", features = ["json", "socks-proxy", "gzip", "brotli"] }
# FIXME: unpin zeroize once we bump MSRV (needs rebuild of docker images)
zeroize = "<1.4.0"

[dev-dependencies]
env_logger = "0.9.0"
