[package]
name = "gdk-electrum"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"

[features]
testing = ["gdk-common/testing"]

[dependencies]
base64 = "0.13"
block-modes = "0.8.0"
gdk-common = { path = "../gdk_common" }
gdk-pin-client = { path = "../gdk_pin_client" }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bitcoin_29 = { package = "bitcoin", version = "0.29", features = ["serde"] }

[dev-dependencies]
env_logger = "0.10.0"
tempfile = "3.2.0"
