[package]
name = "gdk-pin-client"
version = "0.1.0"
edition = "2021"

[dependencies]
block-modes = "0.8.0"
gdk-common = { path = "../gdk_common" }
once_cell = "1.12"
rand = { version = "0.8", features = ["min_const_gen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.2.2"
