[package]
name = "gdk-pin-client"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.7.0"
bitcoin = { version = "0.31", features = ["rand", "serde"] }
block-modes = "0.8.0"
once_cell = "1.12"
rand = { version = "0.8", features = ["min_const_gen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ureq = { version = "2.9", features = ["json", "socks-proxy", "gzip", "brotli"] }
url = "2.2.2"
